1. Fixed spacing for add goals button, i81n keys in goals-tab 2. Moved condtional for displaying in-progress & recommended lessons in    home-tab 3. Added conditional for background banner to not display in redesign

--- a/core/templates/pages/learner-dashboard-page/goals-tab.component.css
+++ b/core/templates/pages/learner-dashboard-page/goals-tab.component.css
@@ -426,7 +426,7 @@
 
 @media screen and (min-width: 767px) {
   .oppia-learner-dash-button--add-goals {
-    gap: 0 8px;
+    gap: 0 4px;
   }
 }
 
